Lots more detail