@@ -7,12 +7,67 @@
   <version>1.0-SNAPSHOT</version>
   <name>pipeline</name>
   <url>http://maven.apache.org</url>
+  <properties>
+    <maven.compiler.target>11</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
+  </properties>
+  <dependencyManagement>
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <groupId>org.junit</groupId>
+      <artifactId>junit-bom</artifactId>
+      <version>5.6.0</version>
+      <type>pom</type>
+      <scope>import</scope>
+    </dependency>
+  </dependencies>
+</dependencyManagement>
+  <dependencies>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <build>
+    <plugins>
+        <plugin>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.1</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.22.2</version>
+        </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>3.1.1</version>
+        <executions>
+          <execution>
+            <id>attach-javadocs</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <additionalJOptions>
+            <additionalJOption>-J--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED</additionalJOption>
+            <additionalJOption>-Xdoclint:all,-html,-accessibility</additionalJOption>
+            <additionalJOption>--base-dir</additionalJOption>
+            <additionalJOption>${project.basedir}</additionalJOption>
+          </additionalJOptions>
+          <doclet>org.asciidoctor.asciidoclet.Asciidoclet</doclet>
+          <docletArtifact>
+            <groupId>com.github.chrisvest</groupId>
+            <artifactId>asciidoclet</artifactId>
+            <version>2.0.0</version>
+          </docletArtifact>
+          <detectJavaApiLink>true</detectJavaApiLink>
+          <overview>src/main/java/overview.adoc</overview>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
